<resources>
    <string name="app_name">Rewards</string>
    <string name="log">Log In to Account</string>
    <string name="choose">+91</string>
    <string name="no">Phone</string>
    <string name="pass">Password</string>
    <string name="login">LOGIN</string>
    <string name="signUp">New User? <b>SIGN UP</b></string>
    <string name="sign">SIGNUP</string>
    <string name="forgot"><b>Forgot Password?</b></string>
    <string name="otp">One Time Password</string>
    <string name="o">0</string>
    <string name="verify">VERIFY</string>
    <string name="resend"><b>Resend OTP?</b></string>
    <string name="reset">Reset Password?</string>
    <string name="password">Password<font color='#FF0000'>*</font></string>
    <string name="cpass">Confirm Password<font color='#FF0000'>*</font></string>
    <string name="create">Create an Account</string>
    <string name="first">First Name<font color='#FF0000'>*</font></string>
    <string name="last">Last Name<font color='#FF0000'>*</font></string>
    <string name="user">User Name<font color='#FF0000'>*</font></string>
    <string name="phone">Phone Number<font color='#FF0000'>*</font></string>
    <string name="email">Email (optional)</string>
    <string name="dob">D.O.B<font color='#FF0000'>*</font></string>
    <string name="txt">To Reset Password, You Have Enter Your Registered Number</string>
    <string name="submit">SUBMIT</string>
    <string name="refer">Refer Code</string>

    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_one">Select One</string>
    <string name="home">Home</string>
    <string name="person">Person</string>
    <string name="set">Settings</string>
    <string name="text">Enter Text to Match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edited">Edited on : %1$s</string>
    <string name="map">Open Google Maps</string>
    <string name="man">Search Location</string>

    <string name="map_key" translatable="false">AIzaSyBWlG-J0cMQBOv8CN1RcDmePChQ7lt9t8U</string>
</resources>