<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:padding="12dp"
        android:layout_marginTop="84dp"
        android:elevation="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        android:textSize="16sp"
        android:padding="16dp"
       android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/open_sans_light"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etph"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etph"
        android:theme="@style/text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt"
        app:layout_constraintEnd_toStartOf="@id/ph"
        app:layout_constraintBottom_toTopOf="@id/btnSub">

        <AutoCompleteTextView
            android:id="@+id/outlined_exposed_dropdown_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:inputType="none"
            android:padding="10dp"
            android:text="@string/choose" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt"
        android:layout_marginStart="114dp"
        android:layout_marginTop="64dp"
        android:hint="@string/no"
        android:padding="10dp"
        android:textSize="18sp"
        android:maxLength="10"
        android:digits="0123456789"
        android:inputType="phone"
        android:textColor="@color/black"
        android:background="@drawable/rounded"
        android:layout_marginEnd="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:elevation="24dp"
        android:background="@drawable/logbutton"
        android:textColor="@color/black"
        android:layout_marginHorizontal="34dp"
        android:gravity="center"
        android:padding="12dp"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ph"
        />
</androidx.constraintlayout.widget.ConstraintLayout>