<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logText"
        android:text="@string/log"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:padding="12dp"
        android:layout_marginTop="64dp"
        android:elevation="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etph"
        android:theme="@style/text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logText"
        app:layout_constraintEnd_toStartOf="@id/ph"
        app:layout_constraintBottom_toTopOf="@id/etLogPass">

        <AutoCompleteTextView
            android:id="@+id/outlined_exposed_dropdown_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:editable="false"
            android:padding="10dp"
            android:text="@string/choose" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logText"
        android:layout_marginStart="114dp"
        android:layout_marginTop="64dp"
        android:hint="@string/no"
        android:elevation="12dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:maxLength="10"
        android:digits="0123456789"
        android:inputType="phone"
        android:textColor="@color/black"
        android:background="@drawable/rounded"
        android:layout_marginEnd="16dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLogPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:passwordToggleEnabled="true"
        android:background="@drawable/rounded"
        app:passwordToggleTint="@color/back"
        android:elevation="12dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/ph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edLogPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:fontFamily="@font/open_sans_light"
            android:background="@drawable/rounded"
            android:padding="12dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLogPass"
        app:layout_constraintBottom_toTopOf="@id/btnLog"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:elevation="24dp"
        android:background="@drawable/logbutton"
        android:textColor="@color/black"
        android:layout_marginHorizontal="34dp"
        android:gravity="center"
        android:padding="12dp"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForgot"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLog"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:padding="12dp"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginHorizontal="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLog"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>