<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logText"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:padding="12dp"
        android:layout_marginTop="64dp"
        android:elevation="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans_light"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etRePass"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="84dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:passwordToggleEnabled="true"
        android:background="@drawable/rounded"
        app:passwordToggleTint="@color/eye"

        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/logText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/open_sans_light"
            android:background="@drawable/rounded"
            android:padding="14dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpass"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans_light"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etConPass"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="84dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:passwordToggleEnabled="true"
        android:background="@drawable/rounded"
        app:passwordToggleTint="@color/eye"

        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/etRePass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edConPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword"
            android:fontFamily="@font/open_sans_light"
            android:background="@drawable/rounded"
            android:padding="14dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/verify"
        android:textSize="16sp"
        android:elevation="24dp"
        android:background="@drawable/logbutton"
        android:textColor="@color/black"
        android:layout_marginHorizontal="34dp"
        android:gravity="center"
        android:padding="12dp"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConPass"
        />

</androidx.constraintlayout.widget.ConstraintLayout>